--- a/src/components/Patient/Navbar/Navbar.css
+++ b/src/components/Patient/Navbar/Navbar.css
@@ -1,53 +1,61 @@
-/* src/components/Navbar/Navbar.css */
 .navbar {
-    background-color: #007bff;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-  }
-  
-  .navbar-brand {
-    font-size: 1.5em;
-    font-weight: bold;
-  }
-  
-  .navbar-list {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .navbar-list li {
-    margin-right: 20px;
-  }
-  
-  .navbar-list li button {
-    background: none;
-    border: none;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-  }
-  
-  .navbar-list li button:hover {
-    background-color: #0056b3;
-  }
-  
-  .logout-button {
-    border: 1px solid red;
-    color: red;
-  }
-  
-  .welcome-message {
-    background-color: #e0f7fa;
-    padding: 5px 10px;
-    border-radius: 5px;
-    color: #007bff;
-    font-weight: bold;
-  }
+  background-color: #007bff;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+
+.navbar-brand {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.navbar-list {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-list li {
+  margin-right: 20px;
+}
+
+.navbar-list li button {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.navbar-list li button:hover {
+  background-color: #0056b3;
+}
+
+.logout-button {
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 15px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.logout-button:hover {
+  background-color: #c82333;
+}
+
+.welcome-message {
+  background-color: #e0f7fa;
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: #007bff;
+  font-weight: bold;
+}
